tests/specs/run/dynamic_import_syntax_error/dynamic_import_syntax_error.js
await import("./dynamic_import_syntax_error_import.js");
